fix: address code review findings across all features
- Fix soft-delete leak: getOverride() now filters isActive
- Add PdlcRole validation on setOverride()
- Pass admin userId to deleteOverride() for audit trail
- Fix skippedRoles computation to union with original classifier roles
- Fix race condition: updateSkippedRequiredRoles before async dispatch
- Rename voiceAgentService field to cloudOrchestrator
- Add design spec and implementation plan docs

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>